[package]
name = "bevy-equirect"
version = "0.1.1"
edition = "2024"
rust-version = "1.88"
description = "use equirectangular images (aka hdri) in bevy"
repository = "https://github.com/Schmarni-Dev/bevy-equirect"
license = "MIT/Apache-2.0"

[dev-dependencies]
bevy = "0.16"
bevy_flycam = "0.16.1"

[dependencies]
bevy_app = { version = "0.16.1", default-features = false }
bevy_asset = { version = "0.16.1", default-features = false }
bevy_ecs = { version = "0.16.1", default-features = false }
bevy_image = { version = "0.16.1", default-features = false }
glam = { version = "0.29", default-features = false }
wgpu-types = { version = "24.0.0", default-features = false }
